feat: add update api for example petstore api
